[package]
name = "room"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9.0"
winit = "0.25.0"
pollster = "0.2"
bytemuck =  {version = "1.7.2", features = ["derive"]}
env_logger = "0.9.0"
anyhow = "1.0.43"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
clap = "3.0.0-beta.4"
byteorder = "1.4.3"
fixed = "1.10.0"
circular-queue = "0.2.6"

# [features]
# floating-point-arithmetics = []